Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-02-11 (SVN):
    * sys_dos.c (Sys_CopyFile): don't use findfirst(). use filelength()
      and getftime()/setftime().

2011-02-11 (SVN):
    * sys_win.c (Sys_FileType): new procedure, using GetFileAttributes().
    * sys_unix.c (Sys_FileType): new procedure, using stat().
    * sys_dos.c (Sys_FileType): new procedure, using _chmod().
    * sys.h (Sys_FileType): add prototype for the new procedure.
    * quakefs.c (FS_FileInGamedir): change return type to qboolean. use
      Sys_FileType() instead of access() system call.
    * quakefs.h: add FS_ENT_NONE, FS_ENT_FILE and FS_ENT_DIRECTORY macros,
      similar to darkplaces.
      (FS_FileInGamedir): adjust prototype.
    * gl_vidsdl.c (GL_OpenLibrary): use Sys_FileType() instead of access()
      system call.
    * screen.c, gl_screen.c (SCR_ScreenShot_f): use Sys_FileType() instead
      of access() system call.
    * hexenworld/client/cl_parse.c: adjust for FS_FileInGamedir() return
      type change.

2011-02-10 (SVN):
    * quakefs.c (FS_OpenFile): use Sys_filesize() to detect the presence
      of a file in the directory tree. allow calling of the function with
      NULL file argument.
      (FS_FileExists): new procedure, returning whether the file is found
      in the hexen2 filesystem.
      (FS_LoadFile): removed redundant assignment to fs_filesize.
      (FS_filelength): removed static.
    * quakefs.h (FS_OpenFile): add prototype.

2011-02-10 (SVN):
    * snd_codec.c (S_CodecUtilOpen):  cast for length must be long.

2011-02-08 (SVN):
    * quakefs.c (FS_fread): fixed coding style.

2011-02-08 (SVN):
    * fixed linkage when we are configured for no sound (bgmnull*.c).

2011-02-08 (SVN):
    * common.h: added note that X_OK (0x01) must not be used in windows
      code.
    * quakeinc.h: include sys.h earlier.

2011-02-08 (SVN):
    * bgmusic.c: minor cleanup for codec type preferences.

2011-02-08 (SVN):