@@ -411,6 +411,11 @@ int Sys_unlink (const char *path)
 	return unlink(path);
 }
 
+int Sys_rename (const char *oldp, const char *newp)
+{
+	return rename(oldp, newp);
+}
+
 long Sys_filesize (const char *path)
 {
 	struct ffblk	f;
